--- a/YoloTrackBreadCounting.ipynb
+++ b/YoloTrackBreadCounting.ipynb
@@ -227,6 +227,39 @@
     }
    ],
    "execution_count": 12
+  },
+  {
+   "metadata": {
+    "jupyter": {
+     "is_executing": true
+    },
+    "ExecuteTime": {
+     "end_time": "2025-11-22T19:52:27.855092100Z",
+     "start_time": "2025-11-22T19:51:35.919380Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "model = YOLO('best_detect.pt')\n",
+    "model.export(format='engine')"
+   ],
+   "id": "489e65bf6ea7db1",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "WARNING TensorRT requires GPU export, automatically assigning device=0\n",
+      "Ultralytics 8.3.228  Python-3.12.0 torch-2.7.1+cu118 CUDA:0 (NVIDIA GeForce GTX 960M, 4096MiB)\n",
+      " ProTip: Export to OpenVINO format for best performance on Intel hardware. Learn more at https://docs.ultralytics.com/integrations/openvino/\n",
+      "YOLO11n summary (fused): 100 layers, 2,582,542 parameters, 0 gradients, 6.3 GFLOPs\n",
+      "\n",
+      "\u001B[34m\u001B[1mPyTorch:\u001B[0m starting from 'best_detect.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 6, 8400) (5.2 MB)\n",
+      "\u001B[31m\u001B[1mrequirements:\u001B[0m Ultralytics requirements ['onnx>=1.12.0,<=1.19.1', 'onnxslim>=0.1.71', 'onnxruntime-gpu'] not found, attempting AutoUpdate...\n"
+     ]
+    }
+   ],
+   "execution_count": null
   }
  ],
  "metadata": {
