- Converted to .bin and ran on RDK X5 board. - some performance optimizations.

--- a/YololCropDetection.ipynb
+++ b/YololCropDetection.ipynb
@@ -19,7 +19,7 @@
     "import uuid\n",
     "\n",
     "# --- CONFIG ---\n",
-    "MODEL_PATH = \"best_detect.pt\"  # your YOLO model\n",
+    "MODEL_PATH = \"data/model/best_detect.pt\"  # your YOLO model\n",
     "# DIRS = [\"red_frames\", \"blue_frames\", \"brown_frames\", \"dark_brown_frames\", \"yellow_frames\", \"green_frames\"]\n",
     "DIRS = [\"red_frames\"]\n",
     "IMAGES_ROOT_DIR = \"D:\\\\Recordings\\\\2025_11_07\"\n",
