--- a/YoloTrackBreadCounting.ipynb
+++ b/YoloTrackBreadCounting.ipynb
@@ -18,8 +18,8 @@
     "\n",
     "# --- CONFIGURATION ---\n",
     "# RECOMMENDATION: Use .engine (TensorRT) or .onnx files for 2x-5x speedup\n",
-    "MODEL_PATH = 'best_detect.pt'  # Change to 'best5.engine' after exporting\n",
-    "MODEL_CLASSIFY_PATH = 'best_classify.pt' # Change to 'best_classify.engine' after exporting\n",
+    "MODEL_PATH = 'data/model/best_detect.pt'  # Change to 'best5.engine' after exporting\n",
+    "MODEL_CLASSIFY_PATH = 'data/model/best_classify.pt'  # Change to 'best_classify.engine' after exporting\n",
     "VIDEO_PATH = \"D:\\\\Recordings\\\\2025_11_07\\\\20251107030005_20251107040005_3.mp4\"\n",
     "TRACKER_CONFIG = 'custom_bytetrack.yaml'\n",
     "\n",
@@ -230,36 +230,31 @@
   },
   {
    "metadata": {
-    "jupyter": {
-     "is_executing": true
-    },
     "ExecuteTime": {
-     "end_time": "2025-11-22T19:52:27.855092100Z",
-     "start_time": "2025-11-22T19:51:35.919380Z"
+     "end_time": "2025-11-26T02:52:13.882460Z",
+     "start_time": "2025-11-26T02:52:13.655646Z"
     }
    },
    "cell_type": "code",
    "source": [
-    "model = YOLO('best_detect.pt')\n",
-    "model.export(format='engine')"
+    "from ultralytics import YOLO\n",
+    "model = YOLO('data/model/best_detect.pt')\n",
+    "\n",
+    "# 2. Get the class names dictionary\n",
+    "class_dict = model.names\n",
+    "print(f\"Detected Classes: {class_dict}\")"
    ],
-   "id": "489e65bf6ea7db1",
+   "id": "4d5096c4bffdd031",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING TensorRT requires GPU export, automatically assigning device=0\n",
-      "Ultralytics 8.3.228  Python-3.12.0 torch-2.7.1+cu118 CUDA:0 (NVIDIA GeForce GTX 960M, 4096MiB)\n",
-      " ProTip: Export to OpenVINO format for best performance on Intel hardware. Learn more at https://docs.ultralytics.com/integrations/openvino/\n",
-      "YOLO11n summary (fused): 100 layers, 2,582,542 parameters, 0 gradients, 6.3 GFLOPs\n",
-      "\n",
-      "\u001B[34m\u001B[1mPyTorch:\u001B[0m starting from 'best_detect.pt' with input shape (1, 3, 640, 640) BCHW and output shape(s) (1, 6, 8400) (5.2 MB)\n",
-      "\u001B[31m\u001B[1mrequirements:\u001B[0m Ultralytics requirements ['onnx>=1.12.0,<=1.19.1', 'onnxslim>=0.1.71', 'onnxruntime-gpu'] not found, attempting AutoUpdate...\n"
+      "Detected Classes: {0: 'bread-bag-closed', 1: 'bread-bag-opened'}\n"
      ]
     }
    ],
-   "execution_count": null
+   "execution_count": 3
   }
  ],
  "metadata": {
