--- a/YoloTrackBreadCounting.ipynb
+++ b/YoloTrackBreadCounting.ipynb
@@ -231,14 +231,14 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-26T02:52:13.882460Z",
-     "start_time": "2025-11-26T02:52:13.655646Z"
+     "end_time": "2025-11-30T07:42:28.179726Z",
+     "start_time": "2025-11-30T07:42:27.457984Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from ultralytics import YOLO\n",
-    "model = YOLO('data/model/best_detect.pt')\n",
+    "model = YOLO('data/model/best_yolo_small.pt')\n",
     "\n",
     "# 2. Get the class names dictionary\n",
     "class_dict = model.names\n",
@@ -254,396 +254,7 @@
      ]
     }
    ],
-   "execution_count": 3
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-26T15:00:59.719760Z",
-     "start_time": "2025-11-26T15:00:59.674445Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "import time\n",
-    "\n",
-    "fps = 30\n",
-    "if fps <= 0 or fps > 120:\n",
-    "    fps = 20.0\n",
-    "frame_duration = 1.0 / fps\n",
-    "start_time = time.time()\n",
-    "print(f\"startTime: {start_time}\")\n",
-    "time.sleep(0.02)\n",
-    "elapsed = time.time() - start_time\n",
-    "print(f\"elapsed: {elapsed}\")\n",
-    "# Sleep until next frame should be grabbed\n",
-    "sleep_time = frame_duration - elapsed\n",
-    "print(f\"Frame Duration : {frame_duration}, Elapsed : {elapsed}, Sleep : {sleep_time}\")\n",
-    "if sleep_time > 0:\n",
-    "    time.sleep(sleep_time)"
-   ],
-   "id": "9d6df91876bd3940",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "startTime: 1764169259.681691\n",
-      "elapsed: 0.021376371383666992\n",
-      "Frame Duration : 0.03333333333333333, Elapsed : 0.021376371383666992, Sleep : 0.01195696194966634\n"
-     ]
-    }
-   ],
-   "execution_count": 14
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-27T17:16:13.374907Z",
-     "start_time": "2025-11-27T17:16:12.043009Z"
-    }
-   },
-   "cell_type": "code",
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "\"\"\"\n",
-    "Improved hardware/software video decode pipeline for RDK X5.\n",
-    "- Hardware decode via hobot_codec if available.\n",
-    "- Software fallback via ffmpeg (requires known resolution).\n",
-    "\n",
-    "Usage:\n",
-    "    - Edit SOURCE and RESOLUTION below.\n",
-    "    - Run: python3 hw_decode_singlefile_fixed.py\n",
-    "\"\"\"\n",
-    "\n",
-    "import shutil\n",
-    "import subprocess\n",
-    "import time\n",
-    "from typing import Generator, Optional, Tuple\n",
-    "\n",
-    "import numpy as np\n",
-    "\n",
-    "# ---------------------------\n",
-    "# USER CONFIG\n",
-    "# ---------------------------\n",
-    "DEFAULT_SOURCE = \"test.mp4\"  # or \"rtsp://192.168.1.10/stream\" or \"/path/to/input.h264\"\n",
-    "OUTPUT_WINDOW = True           # set False if running headless\n",
-    "DEFAULT_WIDTH = 640            # Enter known width for file/software fallback\n",
-    "DEFAULT_HEIGHT = 360           # Enter known height for file/software fallback\n",
-    "# ---------------------------\n",
-    "\n",
-    "class Decoder:\n",
-    "    \"\"\"\n",
-    "    Thin wrapper: hobot_codec for hardware decode, or ffmpeg SW decode with known resolution.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, codec_type: str = \"h264\", prefer_hw: bool = True, width: Optional[int] = None, height: Optional[int] = None):\n",
-    "        self.codec_type = codec_type.lower()\n",
-    "        self.hw = False\n",
-    "        self.decoder = None\n",
-    "        self.width = width\n",
-    "        self.height = height\n",
-    "        self.software_proc = None\n",
-    "\n",
-    "        # Try hardware first\n",
-    "        if prefer_hw:\n",
-    "            try:\n",
-    "                from hobot_codec import Codec, CodecType  # type: ignore\n",
-    "                ctype = CodecType.H264 if \"264\" in self.codec_type else CodecType.H265\n",
-    "                self.decoder = Codec(\n",
-    "                    codec_type=ctype,\n",
-    "                    is_decoder=True,\n",
-    "                    input_mode=\"packet\",\n",
-    "                    output_mode=\"array\",\n",
-    "                    output_format=\"bgr\"\n",
-    "                )\n",
-    "                self.hw = True\n",
-    "                print(\"[INFO] Using hardware decoder (hobot_codec).\")\n",
-    "            except Exception as e:\n",
-    "                print(\"[WARN] hobot_codec not available or failed to init. Falling back to software decode.\")\n",
-    "                print(f\"[DEBUG] hobot_codec init error: {repr(e)}\")\n",
-    "\n",
-    "        if not self.hw:\n",
-    "            self._start_software_decoder()\n",
-    "\n",
-    "    def _start_software_decoder(self):\n",
-    "        ffmpeg_bin = shutil.which(\"ffmpeg\")\n",
-    "        if not ffmpeg_bin:\n",
-    "            raise RuntimeError(\"ffmpeg required for SW fallback but not found in PATH.\")\n",
-    "        if self.width is None or self.height is None:\n",
-    "            raise ValueError(\"Width and height must be set for software fallback!\")\n",
-    "        cmd = [\n",
-    "            ffmpeg_bin,\n",
-    "            \"-loglevel\", \"error\",\n",
-    "            \"-hide_banner\",\n",
-    "            \"-f\", \"h264\",\n",
-    "            \"-i\", \"pipe:0\",\n",
-    "            \"-f\", \"rawvideo\",\n",
-    "            \"-pix_fmt\", \"bgr24\",\n",
-    "            \"-s\", f\"{self.width}x{self.height}\",\n",
-    "            \"pipe:1\"\n",
-    "        ]\n",
-    "        self.software_proc = subprocess.Popen(cmd, stdin=subprocess.PIPE, stdout=subprocess.PIPE, stderr=subprocess.PIPE, bufsize=0)\n",
-    "        print(f\"[INFO] Started ffmpeg-based SW decoder for {self.width}x{self.height}.\")\n",
-    "\n",
-    "    def decode(self, nal_bytes: bytes) -> Optional[np.ndarray]:\n",
-    "        if self.hw:\n",
-    "            try:\n",
-    "                frame = self.decoder.decode(nal_bytes)\n",
-    "                return frame\n",
-    "            except Exception as e:\n",
-    "                print(f\"[ERROR] hobot_codec decode error: {e}\")\n",
-    "                return None\n",
-    "\n",
-    "        # SW fallback: write NAL, read a frame\n",
-    "        if not self.software_proc or not self.software_proc.stdin or not self.software_proc.stdout:\n",
-    "            return None\n",
-    "\n",
-    "        try:\n",
-    "            self.software_proc.stdin.write(nal_bytes)\n",
-    "            self.software_proc.stdin.flush()\n",
-    "        except BrokenPipeError:\n",
-    "            print(\"[ERROR] ffmpeg SW decoder pipe closed.\")\n",
-    "            return None\n",
-    "\n",
-    "        frame_bytes_required = self.width * self.height * 3\n",
-    "        frame_bytes = self.software_proc.stdout.read(frame_bytes_required)\n",
-    "        if len(frame_bytes) == frame_bytes_required:\n",
-    "            frame = np.frombuffer(frame_bytes, dtype=np.uint8).reshape((self.height, self.width, 3))\n",
-    "            return frame\n",
-    "        return None\n",
-    "\n",
-    "    def close(self):\n",
-    "        # Clean up software proc if open\n",
-    "        if self.software_proc:\n",
-    "            try:\n",
-    "                self.software_proc.stdin.close()\n",
-    "                self.software_proc.stdout.close()\n",
-    "                self.software_proc.stderr.close()\n",
-    "                self.software_proc.terminate()\n",
-    "            except Exception:\n",
-    "                pass\n",
-    "            self.software_proc = None\n",
-    "\n",
-    "    def __del__(self):\n",
-    "        self.close()\n",
-    "\n",
-    "# ---------------------------\n",
-    "# NAL splitting utility\n",
-    "# ---------------------------\n",
-    "\n",
-    "def extract_nals_from_buffer(buf: bytearray):\n",
-    "    start_codes = (b'\\x00\\x00\\x01', b'\\x00\\x00\\x00\\x01')\n",
-    "    i = 0\n",
-    "    buf_len = len(buf)\n",
-    "    starts = []\n",
-    "\n",
-    "    while i < buf_len - 3:\n",
-    "        if buf[i:i+3] == b'\\x00\\x00\\x01':\n",
-    "            starts.append(i)\n",
-    "            i += 3\n",
-    "        elif buf[i:i+4] == b'\\x00\\x00\\x00\\x01':\n",
-    "            starts.append(i)\n",
-    "            i += 4\n",
-    "        else:\n",
-    "            i += 1\n",
-    "\n",
-    "    if not starts:\n",
-    "        return []\n",
-    "\n",
-    "    nals = []\n",
-    "    for idx, s in enumerate(starts):\n",
-    "        if buf[s:s+4] == b'\\x00\\x00\\x00\\x01':\n",
-    "            nal_start = s + 4\n",
-    "        else:\n",
-    "            nal_start = s + 3\n",
-    "\n",
-    "        if idx + 1 < len(starts):\n",
-    "            next_s = starts[idx + 1]\n",
-    "            nal = bytes(buf[nal_start:next_s])\n",
-    "        else:\n",
-    "            nal = bytes(buf[nal_start:])\n",
-    "\n",
-    "        nals.append((s, nal))\n",
-    "\n",
-    "    buf.clear()\n",
-    "    return [nal for (_, nal) in nals]\n",
-    "\n",
-    "# ---------------------------\n",
-    "# VideoSource abstraction\n",
-    "# ---------------------------\n",
-    "\n",
-    "class VideoSource:\n",
-    "    \"\"\"\n",
-    "    Yields decoded BGR frames from file/RTSP.\n",
-    "    \"\"\"\n",
-    "    def __init__(self, source: str, codec: str = \"h264\", width: Optional[int] = None, height: Optional[int] = None):\n",
-    "        self.source = source\n",
-    "        self.codec = codec\n",
-    "        self.proc = None\n",
-    "        self.is_pipe = False\n",
-    "        self._buffer = bytearray()\n",
-    "        self.width = width\n",
-    "        self.height = height\n",
-    "        self.decoder = Decoder(codec_type=codec, width=width, height=height)\n",
-    "        self._fileobj = None\n",
-    "        self._start_input()\n",
-    "\n",
-    "    def _start_input(self):\n",
-    "        lower = self.source.lower()\n",
-    "        if lower.endswith(\".h264\") or lower.endswith(\".h265\"):\n",
-    "            self.is_pipe = False\n",
-    "            self.proc = None\n",
-    "            self._fileobj = open(self.source, \"rb\")\n",
-    "            print(f\"[INFO] Opening raw file {self.source}\")\n",
-    "            return\n",
-    "\n",
-    "        ffmpeg_bin = shutil.which(\"ffmpeg\")\n",
-    "        if not ffmpeg_bin:\n",
-    "            raise RuntimeError(\"ffmpeg not found in PATH.\")\n",
-    "\n",
-    "        cmd = [\n",
-    "            ffmpeg_bin,\n",
-    "            \"-loglevel\", \"error\",\n",
-    "            \"-i\", self.source,\n",
-    "            \"-c:v\", \"copy\",\n",
-    "            \"-f\", \"h264\",\n",
-    "            \"pipe:1\"\n",
-    "        ]\n",
-    "\n",
-    "        self.proc = subprocess.Popen(cmd, stdout=subprocess.PIPE, stderr=subprocess.PIPE, bufsize=0)\n",
-    "        self.is_pipe = True\n",
-    "        print(f\"[INFO] Started ffmpeg - streaming raw {self.codec} from {self.source}\")\n",
-    "\n",
-    "    def frames(self) -> Generator[Tuple[np.ndarray, float], None, None]:\n",
-    "        if not self.is_pipe:\n",
-    "            data = self._fileobj.read()\n",
-    "            if not data:\n",
-    "                return\n",
-    "            self._buffer.extend(data)\n",
-    "            nals = extract_nals_from_buffer(self._buffer)\n",
-    "            for nal in nals:\n",
-    "                t0 = time.time()\n",
-    "                frame = self.decoder.decode(nal)\n",
-    "                if frame is not None:\n",
-    "                    yield frame, (time.time() - t0) * 1000.0\n",
-    "            return\n",
-    "\n",
-    "        assert self.proc is not None and self.proc.stdout is not None\n",
-    "        stdout = self.proc.stdout\n",
-    "\n",
-    "        try:\n",
-    "            while True:\n",
-    "                chunk = stdout.read(4096)\n",
-    "                if not chunk:\n",
-    "                    nals = extract_nals_from_buffer(self._buffer)\n",
-    "                    for nal in nals:\n",
-    "                        t0 = time.time()\n",
-    "                        frame = self.decoder.decode(nal)\n",
-    "                        if frame is not None:\n",
-    "                            yield frame, (time.time() - t0) * 1000.0\n",
-    "                    break\n",
-    "\n",
-    "                self._buffer.extend(chunk)\n",
-    "                nals = extract_nals_from_buffer(self._buffer)\n",
-    "                for nal in nals:\n",
-    "                    t0 = time.time()\n",
-    "                    frame = self.decoder.decode(nal)\n",
-    "                    if frame is not None:\n",
-    "                        yield frame, (time.time() - t0) * 1000.0\n",
-    "\n",
-    "        finally:\n",
-    "            if self.proc:\n",
-    "                try:\n",
-    "                    self.proc.kill()\n",
-    "                except Exception:\n",
-    "                    pass\n",
-    "            if self._fileobj:\n",
-    "                self._fileobj.close()\n",
-    "            self.decoder.close()\n",
-    "\n",
-    "# ---------------------------\n",
-    "# Example main for test/debug\n",
-    "# ---------------------------\n",
-    "if __name__ == \"__main__\":\n",
-    "    import cv2\n",
-    "\n",
-    "    source = DEFAULT_SOURCE\n",
-    "    width = DEFAULT_WIDTH\n",
-    "    height = DEFAULT_HEIGHT\n",
-    "\n",
-    "    src = VideoSource(source, \"h264\", width, height)\n",
-    "    for idx, (frame, latency_ms) in enumerate(src.frames()):\n",
-    "        print(f\"Frame {idx}: latency={latency_ms:.2f} ms shape={frame.shape}\")\n",
-    "        if OUTPUT_WINDOW:\n",
-    "            cv2.imshow(\"Decoded\", frame)\n",
-    "            if cv2.waitKey(1) & 0xFF == ord('q'):\n",
-    "                break\n",
-    "    cv2.destroyAllWindows()\n",
-    "    src.decoder.close()"
-   ],
-   "id": "1ba7a5995aad734a",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[WARN] hobot_codec not available or failed to init. Falling back to software decode.\n",
-      "[DEBUG] hobot_codec init error: ModuleNotFoundError(\"No module named 'hobot_codec'\")\n",
-      "[INFO] Started ffmpeg-based SW decoder for 640x360.\n",
-      "[INFO] Started ffmpeg - streaming raw h264 from test.mp4\n"
-     ]
-    }
-   ],
-   "execution_count": 15
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "#!/usr/bin/env python3\n",
-    "import gi\n",
-    "gi.require_version('Gst', '1.0')\n",
-    "gi.require_version('GstRtspServer', '1.0')\n",
-    "gi.require_version('GLib', '2.0')\n",
-    "\n",
-    "from gi.repository import Gst, GstRtspServer, GLib\n",
-    "\n",
-    "Gst.init(None)\n",
-    "VIDEO_PATH = \"/home/sunrise/BreadCounting/output2.mp4\"\n",
-    "\n",
-    "class CameraFactory(GstRtspServer.RTSPMediaFactory):\n",
-    "    def __init__(self):\n",
-    "        super().__init__()\n",
-    "        self.set_shared(True)\n",
-    "        self.set_latency(200)\n",
-    "        self.set_clock(Gst.SystemClock.obtain())\n",
-    "        self.set_stop_on_disconnect(True)\n",
-    "\n",
-    "    def do_create_element(self, url):\n",
-    "        pipeline = (\n",
-    "            f\"filesrc location={VIDEO_PATH} ! qtdemux name=demux \"\n",
-    "            f\"demux.video_0 ! queue ! decodebin ! videoconvert ! videoscale ! \"\n",
-    "            f\"video/x-raw,width=1280,height=720 ! \"\n",
-    "            f\"openh264enc bitrate=2048 ! h264parse ! rtph264pay name=pay0 pt=96 config-interval=1\"\n",
-    "        )\n",
-    "\n",
-    "        return Gst.parse_launch(pipeline)\n",
-    "\n",
-    "def main():\n",
-    "    server = GstRtspServer.RTSPServer()\n",
-    "    factory = CameraFactory()\n",
-    "    server.get_mount_points().add_factory(\"/test_cam\", factory)\n",
-    "    server.attach(None)\n",
-    "    print(\"720p RTSP Camera running at rtsp://127.0.0.1:8554/test_cam\")\n",
-    "    loop = GLib.MainLoop()\n",
-    "    loop.run()\n",
-    "\n",
-    "if __name__ == \"__main__\":\n",
-    "    main()\n"
-   ],
-   "id": "fa9f7b8ccd6dcfad"
+   "execution_count": 16
   }
  ],
  "metadata": {
