- Enhancements and bug fixes. - Added configs table in db like  show_ui_screen to allow to change the state dynamically and react to it. - Some other document files.

--- a/YoloFilterFramesByTargetClass.ipynb
+++ b/YoloFilterFramesByTargetClass.ipynb
@@ -3,21 +3,11 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-18T17:06:30.097060Z",
-     "start_time": "2025-11-18T17:06:30.068589Z"
+     "end_time": "2025-11-30T19:11:00.966415Z",
+     "start_time": "2025-11-30T19:10:49.064058Z"
     }
    },
    "cell_type": "code",
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Setup Complete. Libraries are imported.\n"
-     ]
-    }
-   ],
-   "execution_count": 5,
    "source": [
     "import os\n",
     "import shutil\n",
@@ -27,40 +17,27 @@
     "\n",
     "print(\"Setup Complete. Libraries are imported.\")"
    ],
-   "id": "8c855a08d6480f46"
-  },
-  {
-   "metadata": {},
-   "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
-   "source": [
-    "# --- CONFIGURATION ---\n",
-    "\n",
-    "# 1. Path to your trained YOLO model\n",
-    "MODEL_PATH = 'best3.pt'\n",
-    "\n",
-    "# 2. Path to the folder containing all your image frames\n",
-    "#    (Supports .jpg, .jpeg, .png image formats)\n",
-    "SOURCE_FRAMES_PATH = 'D:\\\\Recordings\\\\2025_11_08\\\\frames'\n",
-    "\n",
-    "# 3. Name of the folder where the filtered images will be saved\n",
-    "DESTINATION_PATH = 'D:\\\\Recordings\\\\2025_11_08\\\\open_bag_frames'\n",
-    "\n",
-    "# 4. The exact name of the class you want to detection\n",
-    "TARGET_CLASS_NAME = 'bread-bag-opened'\n",
-    "\n",
-    "# --- END OF CONFIGURATION ---\n"
+   "id": "8c855a08d6480f46",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Setup Complete. Libraries are imported.\n"
+     ]
+    }
    ],
-   "id": "5398dd48105e66e5"
+   "execution_count": 1
   },
   {
    "metadata": {
-    "collapsed": true
+    "collapsed": true,
+    "ExecuteTime": {
+     "end_time": "2025-12-01T03:40:10.329037Z",
+     "start_time": "2025-12-01T03:40:10.008008Z"
+    }
    },
    "cell_type": "code",
-   "outputs": [],
-   "execution_count": null,
    "source": [
     "# Load the trained YOLO model\n",
     "model = YOLO(MODEL_PATH)\n",
@@ -68,6 +45,9 @@
     "# Get the mapping from class names to class IDs\n",
     "class_names = model.names\n",
     "print(f\"Model Classes: {class_names}\")\n",
+    "\n",
+    "# 4. The exact name of the class you want to detection\n",
+    "TARGET_CLASS_NAME = 'bread-bag-opened'\n",
     "\n",
     "# Find the specific class ID for our target class\n",
     "try:\n",
@@ -80,28 +60,55 @@
     "    print(\"Please check the 'TARGET_CLASS_NAME' in Cell 2 and ensure it matches one of the model's classes.\")\n",
     "    target_class_id = -1  # Set to an invalid ID to stop execution"
    ],
-   "id": "993e33bc5af63a09"
-  },
-  {
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-18T17:06:32.386075Z",
-     "start_time": "2025-11-18T17:06:32.374117Z"
-    }
-   },
-   "cell_type": "code",
+   "id": "993e33bc5af63a09",
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Model Path: best3.pt\n",
-      "Source Frames Path: D:\\Recordings\\2025_11_08\\frames\n",
-      "Destination Path: D:\\Recordings\\2025_11_08\\open_bag_frames\n"
+      "Model Classes: {0: 'bread-bag-closed', 1: 'bread-bag-opened'}\n",
+      "\n",
+      "Successfully found target class: 'bread-bag-opened' with ID: 1\n"
      ]
     }
    ],
-   "execution_count": 6,
+   "execution_count": 8
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-01T10:07:53.286406Z",
+     "start_time": "2025-12-01T10:07:53.253152Z"
+    }
+   },
+   "cell_type": "code",
+   "source": [
+    "# --- CONFIGURATION ---\n",
+    "\n",
+    "# 1. Path to your trained YOLO model\n",
+    "MODEL_PATH = 'data/model/best_detect.pt'\n",
+    "\n",
+    "# 2. Path to the folder containing all your image frames\n",
+    "#    (Supports .jpg, .jpeg, .png image formats)\n",
+    "SOURCE_FRAMES_PATH = 'D:\\\\Recordings\\\\New_Recordings\\\\Brown_Orange_Overlay_Frames'\n",
+    "\n",
+    "# 3. Name of the folder where the filtered images will be saved\n",
+    "DESTINATION_PATH = 'D:\\\\Recordings\\\\New_Recordings\\\\Brown_Orange_Overlay_Frames\\\\Open'\n",
+    "\n",
+    "# --- END OF CONFIGURATION ---\n"
+   ],
+   "id": "2043bc3de29676d9",
+   "outputs": [],
+   "execution_count": 27
+  },
+  {
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-12-01T10:11:50.762435Z",
+     "start_time": "2025-12-01T10:07:56.455060Z"
+    }
+   },
+   "cell_type": "code",
    "source": [
     "\n",
     "# Create the destination directory if it doesn't exist\n",
@@ -146,7 +153,47 @@
     "else:\n",
     "    print(\"\\nSkipping image processing due to class name error.\")"
    ],
-   "id": "3835934a4a5aedce"
+   "id": "3835934a4a5aedce",
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model Path: data/model/best_detect.pt\n",
+      "Source Frames Path: D:\\Recordings\\New_Recordings\\Brown_Orange_Overlay_Frames\n",
+      "Destination Path: D:\\Recordings\\New_Recordings\\Brown_Orange_Overlay_Frames\\Open\n",
+      "\n",
+      "Found 750 images to process. Starting detection...\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "  0%|          | 0/750 [00:00<?, ?it/s]"
+      ],
+      "application/vnd.jupyter.widget-view+json": {
+       "version_major": 2,
+       "version_minor": 0,
+       "model_id": "9c1dcc6ee53440eabdc2404f7a5e0089"
+      }
+     },
+     "metadata": {},
+     "output_type": "display_data",
+     "jetTransient": {
+      "display_id": null
+     }
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "Processing complete.\n",
+      "Copied 114 images containing 'bread-bag-opened' to the 'D:\\Recordings\\New_Recordings\\Brown_Orange_Overlay_Frames\\Open' folder.\n"
+     ]
+    }
+   ],
+   "execution_count": 28
   },
   {
    "metadata": {
