--- a/YoloTrackBreadCounting.ipynb
+++ b/YoloTrackBreadCounting.ipynb
@@ -3,8 +3,8 @@
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-22T13:21:44.431059Z",
-     "start_time": "2025-11-22T13:13:38.498117Z"
+     "end_time": "2025-12-01T18:18:21.492162Z",
+     "start_time": "2025-12-01T18:17:23.330327Z"
     }
    },
    "cell_type": "code",
@@ -18,9 +18,9 @@
     "\n",
     "# --- CONFIGURATION ---\n",
     "# RECOMMENDATION: Use .engine (TensorRT) or .onnx files for 2x-5x speedup\n",
-    "MODEL_PATH = 'data/model/best_detect.pt'  # Change to 'best5.engine' after exporting\n",
-    "MODEL_CLASSIFY_PATH = 'data/model/best_classify.pt'  # Change to 'best_classify.engine' after exporting\n",
-    "VIDEO_PATH = \"D:\\\\Recordings\\\\2025_11_07\\\\20251107030005_20251107040005_3.mp4\"\n",
+    "MODEL_PATH = 'data/model/detect_yolo_small_v3.pt'  # Change to 'best5.engine' after exporting\n",
+    "MODEL_CLASSIFY_PATH = 'data/model/classify_yolo_nano_v2.pt.pt'  # Change to 'best_classify.engine' after exporting\n",
+    "VIDEO_PATH = \"output.mp4\"\n",
     "TRACKER_CONFIG = 'custom_bytetrack.yaml'\n",
     "\n",
     "N_FRAMES_OPEN_CONFIRM = 3\n",
@@ -194,6 +194,7 @@
     "    cv2.putText(frame, \"FPS: calculate if needed\", (10, y_offset), cv2.FONT_HERSHEY_SIMPLEX, 1.6, (0, 255, 255), 3)\n",
     "\n",
     "    sorted_counts = sorted(display_counts)\n",
+    "    print(f\"sorted_counts: {sorted_counts}\")\n",
     "    for cls_name, count in sorted_counts:\n",
     "        y_offset += 70\n",
     "        text = f\"{cls_name}: {count}\"\n",
@@ -224,21 +225,60 @@
      "text": [
       "Loading classification model in worker thread...\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Exception in thread Thread-12 (classifier_worker):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"C:\\Python312\\Lib\\threading.py\", line 1052, in _bootstrap_inner\n",
+      "    self.run()\n",
+      "  File \"C:\\Python312\\Lib\\threading.py\", line 989, in run\n",
+      "    self._target(*self._args, **self._kwargs)\n",
+      "  File \"C:\\Users\\Khaled\\AppData\\Local\\Temp\\ipykernel_21952\\2566700008.py\", line 35, in classifier_worker\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\models\\yolo\\model.py\", line 81, in __init__\n",
+      "    super().__init__(model=model, task=task, verbose=verbose)\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\engine\\model.py\", line 149, in __init__\n",
+      "    self._load(model, task=task)\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\engine\\model.py\", line 288, in _load\n",
+      "    self.model, self.ckpt = load_checkpoint(weights)\n",
+      "                            ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\nn\\tasks.py\", line 1461, in load_checkpoint\n",
+      "    ckpt, weight = torch_safe_load(weight)  # load ckpt\n",
+      "                   ^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\nn\\tasks.py\", line 1409, in torch_safe_load\n",
+      "    ckpt = torch_load(file, map_location=\"cpu\")\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\ultralytics\\utils\\patches.py\", line 116, in torch_load\n",
+      "    return torch.load(*args, **kwargs)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\torch\\serialization.py\", line 1479, in load\n",
+      "    with _open_file_like(f, \"rb\") as opened_file:\n",
+      "         ^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\torch\\serialization.py\", line 759, in _open_file_like\n",
+      "    return _open_file(name_or_buffer, mode)\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"C:\\Users\\Khaled\\PyCharmMiscProject\\.venv\\Lib\\site-packages\\torch\\serialization.py\", line 740, in __init__\n",
+      "    super().__init__(open(name, mode))\n",
+      "                     ^^^^^^^^^^^^^^^^\n",
+      "FileNotFoundError: [Errno 2] No such file or directory: 'data\\\\model\\\\classify_yolo_nano_v2.pt.pt'\n"
+     ]
     }
    ],
-   "execution_count": 12
+   "execution_count": 24
   },
   {
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-30T07:42:28.179726Z",
-     "start_time": "2025-11-30T07:42:27.457984Z"
+     "end_time": "2025-12-01T12:29:31.257821Z",
+     "start_time": "2025-12-01T12:29:31.138843Z"
     }
    },
    "cell_type": "code",
    "source": [
     "from ultralytics import YOLO\n",
-    "model = YOLO('data/model/best_yolo_small.pt')\n",
+    "model = YOLO('data/model/classify_yolo_nano_v2.pt')\n",
     "\n",
     "# 2. Get the class names dictionary\n",
     "class_dict = model.names\n",
@@ -250,11 +290,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Detected Classes: {0: 'bread-bag-closed', 1: 'bread-bag-opened'}\n"
+      "Detected Classes: {0: 'Blue_Yellow', 1: 'Bran', 2: 'Brown_Orange_Overlay', 3: 'Brown_Orange_Small', 4: 'Green_Yellow', 5: 'Red_Yellow', 6: 'Wheatberry'}\n"
      ]
     }
    ],
-   "execution_count": 16
+   "execution_count": 18
   }
  ],
  "metadata": {
