- Test commit, to sync the output with github server.

--- a/YoloFilterFramesByTargetClass.ipynb
+++ b/YoloFilterFramesByTargetClass.ipynb
@@ -86,7 +86,7 @@
     "# --- CONFIGURATION ---\n",
     "\n",
     "# 1. Path to your trained YOLO model\n",
-    "MODEL_PATH = 'data/model/best_detect.pt'\n",
+    "MODEL_PATH = 'data/model/detect_yolo_small_v3.pt'\n",
     "\n",
     "# 2. Path to the folder containing all your image frames\n",
     "#    (Supports .jpg, .jpeg, .png image formats)\n",
@@ -110,48 +110,76 @@
    },
    "cell_type": "code",
    "source": [
+    "import os\n",
+    "import glob\n",
+    "import shutil\n",
+    "from tqdm import tqdm\n",
     "\n",
-    "# Create the destination directory if it doesn't exist\n",
-    "os.makedirs(DESTINATION_PATH, exist_ok=True)\n",
+    "from ultralytics import YOLO  # adjust if your YOLO import differs\n",
     "\n",
-    "print(f\"Model Path: {MODEL_PATH}\")\n",
-    "print(f\"Source Frames Path: {SOURCE_FRAMES_PATH}\")\n",
-    "print(f\"Destination Path: {DESTINATION_PATH}\")\n",
-    "if target_class_id != -1:\n",
-    "    # Get a list of all image files in the source directory\n",
-    "    image_files = glob.glob(os.path.join(SOURCE_FRAMES_PATH, '*.jpg')) + \\\n",
-    "                  glob.glob(os.path.join(SOURCE_FRAMES_PATH, '*.jpeg')) + \\\n",
-    "                  glob.glob(os.path.join(SOURCE_FRAMES_PATH, '*.png'))\n",
+    "# -------------------------------------------------------\n",
+    "# INPUTS\n",
+    "# -------------------------------------------------------\n",
+    "SOURCE_DIR = \"/home/sunrise/BreadCounting/frames\"     # your raw frames\n",
+    "MODEL_PATH = \"/home/sunrise/BreadCounting/model.pt\"    # YOLO model path\n",
+    "OUTPUT_ROOT = os.path.join(os.path.dirname(SOURCE_DIR), \"sorted_by_class\")\n",
+    "# -------------------------------------------------------\n",
     "\n",
-    "    print(f\"\\nFound {len(image_files)} images to process. Starting detection...\")\n",
+    "# Load YOLO model\n",
+    "model = YOLO(MODEL_PATH)\n",
     "\n",
-    "    images_copied = 0\n",
+    "# Collect all image files\n",
+    "image_files = (\n",
+    "    glob.glob(os.path.join(SOURCE_DIR, \"*.jpg\")) +\n",
+    "    glob.glob(os.path.join(SOURCE_DIR, \"*.jpeg\")) +\n",
+    "    glob.glob(os.path.join(SOURCE_DIR, \"*.png\"))\n",
+    ")\n",
     "\n",
-    "    # Loop through each image with a progress bar\n",
-    "    for image_path in tqdm(image_files):\n",
-    "        # Run inference on the image\n",
-    "        results = model(image_path, verbose=False)  # verbose=False keeps the output clean\n",
+    "print(f\"Using model: {MODEL_PATH}\")\n",
+    "print(f\"Scanning source directory: {SOURCE_DIR}\")\n",
+    "print(f\"Found {len(image_files)} images\")\n",
     "\n",
-    "        # Check the results\n",
-    "        for result in results:\n",
-    "            # Get the class IDs of all detected objects in the current image\n",
-    "            detected_class_ids = result.boxes.cls.cpu().numpy().astype(int)\n",
+    "# Create output root folder\n",
+    "os.makedirs(OUTPUT_ROOT, exist_ok=True)\n",
+    "print(f\"Output root: {OUTPUT_ROOT}\")\n",
     "\n",
-    "            # If our target class ID is in the list of detected IDs\n",
-    "            if target_class_id in detected_class_ids:\n",
-    "                # Copy the file to the destination folder\n",
-    "                file_name = os.path.basename(image_path)\n",
-    "                destination_file_path = os.path.join(DESTINATION_PATH, file_name)\n",
-    "                shutil.copy2(image_path, destination_file_path)\n",
-    "                images_copied += 1\n",
+    "# Class name lookup from YOLO model\n",
+    "class_names = model.model.names\n",
     "\n",
-    "                # We found the class, no need to check other detections in this image\n",
-    "                break\n",
+    "print(\"Detected YOLO classes:\")\n",
+    "for cid, cname in class_names.items():\n",
+    "    print(f\"  {cid}: {cname}\")\n",
     "\n",
-    "    print(f\"\\nProcessing complete.\")\n",
-    "    print(f\"Copied {images_copied} images containing '{TARGET_CLASS_NAME}' to the '{DESTINATION_PATH}' folder.\")\n",
-    "else:\n",
-    "    print(\"\\nSkipping image processing due to class name error.\")"
+    "print(\"\\nRunning detection and sorting...\")\n",
+    "\n",
+    "# Process images\n",
+    "for image_path in tqdm(image_files):\n",
+    "    results = model(image_path, verbose=False)\n",
+    "\n",
+    "    # A single image may return multiple 'results', but usually results[0] is enough\n",
+    "    result = results[0]\n",
+    "\n",
+    "    # Extract detected class IDs\n",
+    "    detected_class_ids = result.boxes.cls.cpu().numpy().astype(int)\n",
+    "\n",
+    "    # Skip images with no detections\n",
+    "    if len(detected_class_ids) == 0:\n",
+    "        continue\n",
+    "\n",
+    "    # For each detected class → create folder → copy image\n",
+    "    for cid in set(detected_class_ids):\n",
+    "        class_name = class_names[cid]\n",
+    "        # clean folder name\n",
+    "        safe_class_name = class_name.replace(\" \", \"_\").replace(\"/\", \"_\")\n",
+    "\n",
+    "        class_folder = os.path.join(OUTPUT_ROOT, safe_class_name)\n",
+    "        os.makedirs(class_folder, exist_ok=True)\n",
+    "\n",
+    "        dst = os.path.join(class_folder, os.path.basename(image_path))\n",
+    "        shutil.copy2(image_path, dst)\n",
+    "\n",
+    "print(\"\\nCompleted.\")\n",
+    "print(f\"Sorted images are inside: {OUTPUT_ROOT}\\n\")\n"
    ],
    "id": "3835934a4a5aedce",
    "outputs": [
